--- a/Git e GitHub/site-exemplo/index.html
+++ b/Git e GitHub/site-exemplo/index.html
@@ -11,5 +11,7 @@
     <p>Este é um site exemplo para o GitHub</p>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem impedit adipisci facilis quasi, odio pariatur aspernatur tempore ex ab cumque, incidunt distinctio, exercitationem eveniet. Eligendi molestias eius repudiandae earum laboriosam?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem impedit adipisci facilis quasi, odio pariatur aspernatur tempore ex ab cumque, incidunt distinctio, exercitationem eveniet. Eligendi molestias eius repudiandae earum laboriosam?</p>
 </body>
 </html>
