--- a/Git e GitHub/index.html
+++ b/Git e GitHub/index.html
@@ -1,35 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro site no Visual Studio Code</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <style type="text/css">
+        a.nounderline {text-decoration: none; }
+    </style>
 </head>
+
 <body>
     <center>
         <p>
-            <h1>estudando python com a Microsoft</h1>
-            <h2>estudando GitHub com o Curso em Vídeo</h2>
-            <h3>estudando Visual Studio Code</h3>
-            <h4>estudando GitHub com o Curso em Vídeo</h4>
-            <h5>estudando python com a Microsoft</h5>
-            <h6>estudando GitHub com o Curso em Vídeo</h6>
+            <h1>Estudando Python com a Microsoft</h1>
+            <h2>Estudando GitHub com o Curso em Vídeo</h2>
+            <h3>Estudando Visual Studio Code por conta própria</h3>
         </p>
-    <a target="_blank" href="https://github.com/geanclm">
-       GitHub com projetos compartilhados! :-)
-    </a>
-    </center> 
-    <ul>
-        <li>planejamento</li>
-        <li>paciência</li>
-        <li>persistência</li>
-    </ul>
-    <ol>
-        <li>profissionalismo</li>
-        <li>propósito</li>
-        <li>prosperidade</li>
-    </ol>
+        <a target="_blank" href="https://github.com/geanclm" class="nounderline">
+            Projetos compartilhados!
+        </a>
+
+        <br><br>
+
+        <table border="1" width="500">
+            <thead>
+                <tr>
+                    <th scope="col">Prioridade 1</th>
+                    <th scope="col">Prioridade 2</th>
+                </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>
+                    <ul>
+                        <li>planejamento</li>
+                        <li>paciência</li>
+                        <li>persistência</li>
+                        <li>organização</li>
+                        <li>produtividade</li>
+                    </ul>
+                </td>
+                    <td>
+                        <ol>
+                            <li>profissionalismo</li>
+                            <li>propósito</li>
+                            <li>prosperidade</li>
+                            <li>caridade</li>
+                            <li>legado</li>
+                        </ol>
+                    </td>
+            </tr>
+            </tbody>
+        </table>
+
     <br>
     <span>
         <a target="_blank" href='https://docs.microsoft.com/pt-br/learn/paths/beginner-python/'>
@@ -39,5 +64,6 @@
             <img width="200px" src="índice.png" alt="Curso em Vídeo">
         </a>
     </span>
+    </center>
 </body>
 </html>
